@@ -1,8 +1,8 @@
 Package: stm
 Type: Package
 Title: Estimation of the Structural Topic Model
-Version: 1.1.4
-Date: 2016-03-04
+Version: 1.1.5
+Date: 2016-09-10
 Author: Margaret E. Roberts, Brandon M. Stewart and Dustin Tingley
 Maintainer: Brandon Stewart <bms4@princeton.edu>
 Depends: R (>= 2.10)
@@ -17,4 +17,5 @@ Description: The Structural Topic Model (STM) allows researchers
   and estimation of topic-covariate regressions.
 License: MIT + file LICENSE
 URL: http://structuraltopicmodel.com 
+Roxygen: list(roclets = c("rd", "collate"))
 RoxygenNote: 5.0.1
