@@ -1,109 +1,48 @@
-# Generated by roxygen2: do not edit by hand
-
-S3method(head,textProcessor)
-S3method(plot,MultimodDiagnostic)
-S3method(plot,STM)
-S3method(plot,STMpermute)
-S3method(plot,estimateEffect)
-S3method(plot,findThoughts)
-S3method(plot,searchK)
-S3method(plot,topicCorr)
-S3method(print,MultimodDiagnostic)
-S3method(print,STM)
-S3method(print,findThoughts)
-S3method(print,labelTopics)
-S3method(print,sageLabels)
-S3method(print,textProcessor)
-S3method(summary,STM)
-S3method(summary,textProcessor)
-export(checkBeta)
-export(checkResiduals)
-export(cloud)
-export(convertCorpus)
-export(estimateEffect)
-export(eval.heldout)
-export(expgrad)
-export(fastAnchor)
-export(findThoughts)
-export(findTopic)
-export(gram)
-export(labelTopics)
-export(make.heldout)
-export(manyTopics)
-export(multiSTM)
-export(permutationTest)
-export(plotModels)
-export(plotQuote)
-export(plotRemoved)
-export(plotTopicLoess)
-export(prepDocuments)
-export(readCorpus)
-export(recoverL2)
-export(s)
-export(sageLabels)
-export(searchK)
-export(selectModel)
-export(stm)
-export(textProcessor)
-export(thetaPosterior)
-export(toLDAvis)
-export(topicCorr)
-export(topicLasso)
-export(topicQuality)
-export(writeLdac)
 import(Matrix)
-importFrom(Rcpp,evalCpp)
-importFrom(glmnet,cv.glmnet)
-importFrom(glmnet,glmnet)
-importFrom(grDevices,rainbow)
-importFrom(grDevices,rgb)
-importFrom(graphics,abline)
-importFrom(graphics,axis)
-importFrom(graphics,hist)
-importFrom(graphics,legend)
-importFrom(graphics,lines)
-importFrom(graphics,par)
-importFrom(graphics,plot)
-importFrom(graphics,points)
-importFrom(graphics,segments)
-importFrom(graphics,smoothScatter)
-importFrom(graphics,text)
-importFrom(graphics,title)
-importFrom(lda,lda.collapsed.gibbs.sampler)
-importFrom(matrixStats,colLogSumExps)
-importFrom(matrixStats,logSumExp)
-importFrom(matrixStats,rowLogSumExps)
-importFrom(slam,as.simple_triplet_matrix)
-importFrom(slam,simple_triplet_matrix)
-importFrom(slam,tcrossprod_simple_triplet_matrix)
-importFrom(splines,bs)
-importFrom(splines,ns)
-importFrom(stats,aggregate)
-importFrom(stats,as.formula)
-importFrom(stats,coef)
-importFrom(stats,cor)
-importFrom(stats,cov)
-importFrom(stats,lm)
-importFrom(stats,loess)
-importFrom(stats,median)
-importFrom(stats,model.frame)
-importFrom(stats,model.matrix)
-importFrom(stats,model.response)
-importFrom(stats,na.omit)
-importFrom(stats,optim)
-importFrom(stats,optimize)
-importFrom(stats,pchisq)
-importFrom(stats,predict)
-importFrom(stats,quantile)
-importFrom(stats,rbinom)
-importFrom(stats,rgamma)
-importFrom(stats,rnorm)
-importFrom(stats,runif)
-importFrom(stats,terms)
-importFrom(stringr,str_detect)
-importFrom(stringr,str_replace)
-importFrom(stringr,str_replace_all)
-importFrom(stringr,str_split)
-importFrom(stringr,str_wrap)
-importFrom(utils,packageVersion)
+importFrom(matrixStats, logSumExp, rowLogSumExps, colLogSumExps)
+importFrom(slam, tcrossprod_simple_triplet_matrix, simple_triplet_matrix, as.simple_triplet_matrix)
+importFrom(splines, ns,bs)
+importFrom(lda, lda.collapsed.gibbs.sampler)
+importFrom(stringr,str_wrap, str_split, str_detect, str_replace, str_replace_all)
+importFrom(glmnet, glmnet, cv.glmnet)
+importFrom(Rcpp, evalCpp)
+importFrom(grDevices, rainbow, rgb)
+importFrom(graphics, abline, axis, hist, legend, lines, par, plot, points, segments, smoothScatter, text, title)
+importFrom(stats, aggregate, as.formula, coef, cor, cov, lm, loess, median, model.frame, model.response, model.matrix, na.omit, optim, optimize, pchisq, predict, quantile, rbinom, rgamma, rnorm, runif, terms)
+importFrom(utils, packageVersion)
+
+export(stm, summary.STM, print.STM, plot.STM,
+       estimateEffect, plot.estimateEffect, 
+       topicCorr, plot.topicCorr,
+       labelTopics, print.labelTopics,
+       findThoughts, print.findThoughts, plot.findThoughts, plotQuote,
+       convertCorpus,
+       manyTopics, selectModel, plotModels, plotTopicLoess, 
+       prepDocuments, readCorpus, writeLdac, textProcessor, print.textProcessor,
+       summary.textProcessor, head.textProcessor, findTopic,
+	topicQuality, s, 
+      permutationTest, plot.STMpermute, cloud, sageLabels, print.sageLabels,
+      multiSTM, print.MultimodDiagnostic, plot.MultimodDiagnostic,
+  checkBeta, make.heldout, eval.heldout, checkResiduals,
+  searchK, plot.searchK, plotRemoved, thetaPosterior, topicLasso,
+	toLDAvis)
+
+S3method(summary, STM)
+S3method(print, STM)
+S3method(plot, STM)
+S3method(print, labelTopics)
+S3method(plot, topicCorr)
+S3method(plot, estimateEffect)
+S3method(print, findThoughts)
+S3method(plot, findThoughts)
+S3method(plot, STMpermute)
+S3method(print, sageLabels)
+S3method(print, MultimodDiagnostic)
+S3method(plot, MultimodDiagnostic)
+S3method(plot, searchK)
+S3method(print, textProcessor)
+S3method(summary, textProcessor)
+S3method(head, textProcessor)
+
+
 useDynLib(stm)
