@@ -161,7 +161,7 @@
 #' cov.value1=1, cov.value2=0, xlim=c(-1,1), moderator="binaryvar",
 #' moderator.value=0)
 #' }
-#' @export
+#' @export 
 plot.estimateEffect <- function(x, covariate, model=NULL,
                                 topics=x$topics,
                                 method="pointestimate",
